--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -2,9 +2,9 @@ http {
     server {
         listen 80 default_server;
         location /uploads/ {
-            root /home/box/web/uploads;
+            root /home/box/web;
         }
-        location ~* ^.+\.w+$ {
+        location ~* \.w+$ {
             root /home/box/web/public;
         }
     }
