--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -1,11 +1,9 @@
-http {
-    server {
-        listen 80 default_server;
-        location /uploads/ {
-            root /home/box/web;
-        }
-        location ~* \.w+$ {
-            root /home/box/web/public;
-        }
-    }
+server {                                                                        
+    listen 80 default_server;                                                   
+    location ^~ /uploads/ {                                                        
+        root /home/box/web;                                                     
+    }                                                                           
+    location ~* ^.+\.\w+$ {                                                      
+        root /home/box/web/public;                                              
+    }                                                                           
 }
