--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -5,5 +5,8 @@ server {
     }                                                                           
     location ~* ^.+\.\w+$ {                                                      
         root /home/box/web/public;                                              
-    }                                                                           
+    }
+    location /hello/ {
+        proxy_pass http://127.0.0.1:8080;
+    }
 }
